# omnilytics

./: Readme.md  docker-compose.yml
backend/: README.md  api.py  dockerfile  pyproject.toml  rand_gen.py  requirements.txt
frontend/: dockerfile
frontend/src/: App.css  App.js
