[tool.poetry]
name = "backend"
version = "0.1.0"
description = "flask backend project for omnilytics"
authors = ["eteng <eteng@busyunit.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
